Fix bug where tooltip gets cutoff by parent

--- a/styles.css
+++ b/styles.css
@@ -17,9 +17,8 @@
 .tooltip-container{
     display: none;
     position: absolute;
-    top: -130px;
+    top: -110px;
     left: -240px;
-    bottom: 100%; /* Position it above the container */
     z-index: 9999;
     /* background: rgb(111, 19, 54); */
     background: black;
@@ -33,6 +32,7 @@
     /* box-shadow: 0 0 10px 5px; */
     font-family: 'Raleway', sans-serif;
     font-weight: 300;
+    overflow: visible!important;
 }
 
 .none{
@@ -57,6 +57,7 @@
     height: 100%;
     justify-content: space-between;
     align-items: center;
+    overflow: visible!important;
 }
 
 .modified-name{
@@ -237,7 +238,7 @@
 .funny-popup {
     position: fixed;
     top: 5px;
-    right: -150px; /* Start off-screen to the right */
+    right: -150px; 
     background-color: black;
     color: white;
     padding: 5px;
